--- a/chat/style.css
+++ b/chat/style.css
@@ -2,4 +2,64 @@
 	width: 350px;
 	height: 400px;
 	border: 1px solid gray;
+  overflow-y: auto; 
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+}
+
+.avatar {
+  background-color: #ddd;
+  width:  40px;
+  height:  40px;
+  border-radius: 40px;
+  float: left;
+  margin-left: 10px;
+}
+
+ul.operator > li, 
+ul.client > li {
+  font-size: 1em;
+  padding: 10px;
+  margin: 2px;
+  border-radius: 0px;
+  list-style: none;
+}
+
+.operator > li:first-child {
+  border-radius: 10px 10px 0 0;
+}
+
+.operator > li:last-child {
+  border-radius: 0 0 10px 10px;
+}
+
+.operator > li:only-child {
+  border-radius: 10px;
+}
+
+.client > li:first-child {
+  border-radius: 10px 10px 0 0;
+}
+
+.client > li:last-child {
+  border-radius: 0 0 10px 10px;
+}
+
+.client > li:only-child {
+  border-radius: 10px;
+}
+
+
+ul.operator > li {
+  background-color: #eee;
+  margin-right: 10%;
+  margin-left: 15px;
+}
+
+ul.client > li {
+  background-color: #666;
+  margin-left: 30%;
+  margin-right: 10px;
+  color: #eee;
 }
