--- a/lesson10/lesson10.css
+++ b/lesson10/lesson10.css
@@ -1,21 +1,23 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: Helvetica, Verdana, sans-serif;
 }
 
 header {
     background: url(https://lteplova.github.io/netology_lessons/assets/img/header-backgroudn.jpg) no-repeat;
     width: 100%;
-    height: 100vh;
-
-   }
+    /* height: 100px; */
+    position: fixed;
+    top: 0px;
+    z-index: 1;
+}
 
 .cent {
-
+    box-sizing: border-box;
     margin: 0 auto;
     max-width: 1168px;
-    border-bottom: solid #4F5168;
+    border-bottom: 2px solid #4F5168;
     text-transform: uppercase;
 }
 
@@ -28,7 +30,8 @@ header {
 .logo {
     margin: auto 0;
     color: #66697E;
-    font: bold 3em verdana, sans-serif;
+    font-weight: 900;
+    font-size: 2em;
     float: left;
     line-height: 100px;
     text-align: left;
@@ -40,10 +43,10 @@ span {
 }
 
 ul.menu {
-  line-height: 60px;
+    line-height: 100px;
     float: right;
     text-align: right;
-    
+    margin: 0;
 }
 
 ul.menu li {
@@ -53,151 +56,148 @@ ul.menu li {
     font-size: 0.8em;
     width: 150px;
     margin-right: -5px;
-   
 }
 
 ul.menu a {
-    color: #fff;
+    color: #bbbcc5;
     text-decoration: none;
 }
 
 .promo {
-  margin: 0 auto;
-  max-width: 1168px;
+    background: url(https://lteplova.github.io/netology_lessons/assets/img/header-backgroudn.jpg) no-repeat;
+    height: 100vh;
 }
+
 .promo div {
 
-  position: absolute;
-  width: 1168px;
+    position: absolute;
+    width: 1168px;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     text-align: center;
-
 }
 
 
 
 .promo h1 {
-  color: #FFF;
-  text-transform: uppercase;
-  font: bold 4em verdana, sans-serif;
-  margin: 0 auto;
-  max-width: 1168px;
-  text-align: center;
-  }
+    color: #FFF;
+    text-transform: uppercase;
+    font-size: 3.8em;
+    margin: 0 auto;
+    max-width: 1168px;
+    text-align: center;
+    padding: 0 10%;
+}
+
 .promo p {
-  color: #FFF;
-  font: 2em Montserrat, sans-serif;
-  margin: 40px auto;
-  max-width: 1168px;
-  text-align: center;
-  }
+    color: #bbbcc5;
+    font-size: 1.5em;
+    margin: 40px auto;
+    max-width: 1168px;
+    text-align: center;
+    padding: 0 10%;
+}
 
-  .promo div button {
-  width: 200px;
-  height: 50px;
-  background-color: #FF0000;
-  border: none;
-  outline: none;
-  border-radius: 2px;
-  text-transform: uppercase;
-  font-size: 0.7em;
-  color: #FFF;
-
+.promo div button {
+    width: 200px;
+    height: 50px;
+    background-color: #e84545;
+    border: none;
+    outline: none;
+    border-radius: 2px;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    color: #eee;
 }
 
 .mcent {
-  margin: 50px auto;
+    margin: 80px auto;
     max-width: 1168px;
     padding: 0;
-    /*border: solid green;*/
-
 }
 
 .mcent div {
-  text-align: center;
-  padding: 1.5%;
-  box-sizing: box;
-  /*border: solid red;*/
-  display: inline-block;
-  width: 30%;
-  height: 300px;
-  margin-right: -5px;
-
+    text-align: center;
+    padding: 1.5%;
+    box-sizing: box;
+    display: inline-block;
+    width: 30%;
+    margin-right: -5px;
 }
 
 .mcent div h2 {
-  text-transform: uppercase;
-  font: verdana, sans-serif;
+    text-transform: uppercase;
+    font-size: 0.9em;
 }
 
 .mcent div p {
-  color: #808080;
-  font: Montserrat, sans-serif;
+    color: #808080;
+    line-height: 1.5em;
 }
 
 .image img {
-  display: inline-block;
-  box-sizing: border-box;
-  vertical-align: top;
-  width: 25%;
-  font-size: 0;
-  margin-right: -4px;
-  border-right: 1px solid #FFF;
-  border-bottom: 1px solid #FFF;
+    display: inline-block;
+    box-sizing: border-box;
+    vertical-align: top;
+    width: 25%;
+    font-size: 0;
+    margin-right: -4px;
+    border-right: 1px solid #FFF;
+    border-bottom: 1px solid #FFF;
 }
+
 
 /* .image img:hover {
   opacity: 0.7;
 }
  */
-.foot1 {
-  margin-top: 0px;
-  height: 210px;
-  background: #3A3E64;
-/*   margin-right: -5px; */
-  text-align: center;
-  }
 
-.foot1 > div {
-  display: inline-block;
-  padding: 40px 0;
-  width: 20%;
-  color: #FFF;
-  line-height: 20px;
-  vertical-align: top;
+.foot1 {
+    margin-top: 0px;
+    height: 210px;
+    background: #3A3E64;
+    /*   margin-right: -5px; */
+    text-align: center;
+}
+
+.foot1>div {
+    display: inline-block;
+    padding: 40px 0;
+    width: 20%;
+    color: #FFF;
+    line-height: 20px;
+    vertical-align: top;
 }
 
 .foot1 h3 {
-  text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .foot1 p {
-  color: #808080;
-  font: Montserrat, sans-serif;
+    color: #808080;
+    font: Montserrat, sans-serif;
 }
 
 .iconss {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  border: solid 2px #FFF;
-
-
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border: solid 2px #FFF;
 }
 
 .foot2 {
-  height: 100px;
-  padding: 10px 0;
-  background: #313454;
-  text-align: center;
-  color: #808080; 
+    height: 100px;
+    padding: 10px 0;
+    background: #313454;
+    text-align: center;
+    color: #808080;
 }
 
 .foot2 span:nth-child(1) {
-  color: red;
+    color: red;
 }
+
 .foot2 span:nth-child(2) {
-  color: #fff;
+    color: #fff;
 }
