--- a/lesson10/lesson10.css
+++ b/lesson10/lesson10.css
@@ -145,8 +145,8 @@ ul.menu a {
     margin-right: -4px;
     border-right: 1px solid #FFF;
     border-bottom: 1px solid #FFF;
+    position: absolute;
 }
-
 
 /* .image img:hover {
   opacity: 0.7;
