--- a/lesson10/lesson10.css
+++ b/lesson10/lesson10.css
@@ -7,6 +7,7 @@ body {
 header {
     background: url(https://lteplova.github.io/netology_lessons/assets/img/header-backgroudn.jpg) no-repeat;
     width: 100%;
+    background-size: cover;
     /* height: 100px; */
     position: fixed;
     top: 0px;
@@ -65,20 +66,20 @@ ul.menu a {
 
 .promo {
     background: url(https://lteplova.github.io/netology_lessons/assets/img/header-backgroudn.jpg) no-repeat;
-    height: 100vh;
-    min-height: 300px;
+    background-size: cover;
+    height: 85vh;
+    min-height: 500px;
+    /* max-height: 1000px; */
 }
 
 .promo div {
-
     position: absolute;
     width: 1168px;
-    top: 50%;
+    top: 47vh;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     text-align: center;
 }
-
 
 
 .promo h1 {
@@ -121,9 +122,9 @@ ul.menu a {
 .mcent div {
     text-align: center;
     padding: 1.5%;
-    box-sizing: box;
+    box-sizing: border-box;
     display: inline-block;
-    width: 30%;
+    width: 33.3333%;
     margin-right: -5px;
 }
 
@@ -137,27 +138,61 @@ ul.menu a {
     line-height: 1.5em;
 }
 
-.image img {
+.image div {
     display: inline-block;
     box-sizing: border-box;
     vertical-align: top;
     width: 25%;
-    font-size: 0;
-    margin-right: -4px;
-    border-right: 1px solid #FFF;
-    border-bottom: 1px solid #FFF;
+    height: 300px;
+    margin-right: -5px;
+    border: 1px solid #FFF;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
- 
-/* .image img:hover {
-  opacity: 0.7;
+
+.image div:nth-child(4),
+div:nth-child(8) {
+  border-right: none;
 }
- */
+.image div:nth-child(1),
+div:nth-child(5) {
+  border-left: none;
+}
+
+.image div h5 {
+    display: none;
+    box-sizing: border-box;
+    height: 100%;
+    font-size: 1em;
+    font-weight: 700;
+    margin: 0;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 130px 20%;
+    color: #fff;
+}
+
+.image h5>span {
+    font-weight: 500;
+    text-transform: capitalize;
+}
+
+.image h5>span:before {
+  content: "";
+  clear: both;
+  display: block;
+}
+
+.image div:hover h5 {
+    display: block;
+    background-color: rgba(232, 69, 69, 0.9);
+}
+
 
 .foot1 {
     margin-top: 0px;
     height: 210px;
     background: #3A3E64;
-    /*   margin-right: -5px; */
     text-align: center;
 }
 
@@ -176,7 +211,6 @@ ul.menu a {
 
 .foot1 p {
     color: #808080;
-    font: Montserrat, sans-serif;
 }
 
 .iconss {
