--- a/diplom/style.css
+++ b/diplom/style.css
@@ -1,9 +1,6 @@
 body {
     margin: 0;
     padding: 0;
-    /* font-family: Cookie, cursive;
-    font-family: Vollkorn, serif;
-    font-family: Roboto Slab, serif; */
     font-family: Montserrat, sans-serif;
 }
 
@@ -66,7 +63,6 @@ header {
 ul.menu li {
     list-style: none;
     display: inline-block;
-    font-family: Montserrat;
     text-transform: uppercase;
     vertical-align: top;
     font-size: 14px;
@@ -88,7 +84,6 @@ ul.menu a:hover {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0% 20%;
-    font-family: Montserrat;
     font-weight: 700;
     margin: auto;
     text-align: center;
@@ -139,6 +134,10 @@ button {
     cursor: pointer;
 }
 
+a {
+    text-decoration: none;
+}
+
 button:hover {
     background-color: #fdc918;
 }
@@ -148,7 +147,6 @@ section {
 }
 
 section>h2 {
-    font-family: Montserrat;
     text-transform: uppercase;
     text-align: center;
     font-weight: 700;
@@ -191,7 +189,6 @@ section>p {
 .blocks h2,
 .gallery h2,
 .about h2 {
-    font-family: Montserrat;
     text-transform: capitalize;
     text-align: center;
     font-weight: 700;
@@ -273,7 +270,6 @@ section.container_team {
 .about h3 {
     font-size: 18px;
     color: rgb(34, 34, 34);
-    font-family: "Montserrat";
     font-weight: bold;
     text-align: right;
     margin: 0;
@@ -324,7 +320,6 @@ section.container_team {
     padding: 20px;
     font-size: 18px;
     color: rgb(255, 255, 255);
-    font-family: "Montserrat";
     font-weight: bold;
     text-align: center;
     text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
@@ -358,7 +353,6 @@ section.container_team {
 
 .team h3 {
     font-size: 16px;
-    font-family: "Montserrat";
     font-weight: 700;
     text-align: center;
     text-transform: capitalize;
@@ -393,6 +387,7 @@ section.container_team {
 
 .twitter {
     background-position: 0 5px;
+
 }
 
 .fb {
@@ -488,7 +483,6 @@ footer .left {
     font-size: 14px;
     line-height: 22px;
     color: rgb(85, 85, 85);
-    font-family: "Montserrat";
     text-align: left;
     display: inline-block;
     width: calc(50% - 100px);
