--- a/diplom/style1.css
+++ b/diplom/style1.css
@@ -26,7 +26,7 @@ body {
   box-sizing: border-box;
   margin: 0 auto;
   width: 940px;
-  }
+ }
 
 .header .center:after {
   content: '';
@@ -50,7 +50,7 @@ body {
   transform: scale(1.1);
 }
 
-.header .block_menu {
+.header .menu {
   line-height: 120px;
   float: right;
   text-align: right;
@@ -76,6 +76,7 @@ body {
   text-decoration: none;
 }
 
+
 .header .menu-link:hover {
   color: #fff;
   text-decoration: underline;
@@ -87,12 +88,19 @@ body {
   background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/promo.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0 20%;
+  background-position: 0% 20%;
   font-weight: 700;
   margin: auto;
   text-align: center;
   height: 700px;
   position: relative;
+}
+
+.promo_text_center {
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%, -50%);
 
 }
 
@@ -107,20 +115,12 @@ body {
   height: 580px;
 }
 
-.promo_text_center {
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-
-}
 .promo h1 {
   color: #fff;
   text-transform: uppercase;
   font-size: 4.4em;
   margin: 20px;
   white-space: nowrap;
-
 }
 
 .promo p {
@@ -259,6 +259,13 @@ section.container_team {
   padding: 10%;
 }
 
+.gallery:nth-child(1), .gallery:nth-child(4)  {
+  margin-left: 0;
+}
+.gallery:nth-child(3), .gallery:nth-child(6)  {
+  margin-right: 0;
+}
+
 .gallery {
   box-sizing: border-box;
   display: inline-block;
@@ -271,9 +278,11 @@ section.container_team {
 
 .about {
   vertical-align: top;
-  width: 375px;
+    width: 500px;
   display: inline-block;
+  border: solid green;
 }
+
 
 .about h2 {
   text-align: right;
@@ -297,9 +306,27 @@ section.container_team {
   font-style: normal;
 }
 
+.vert_line:before { 
+  position: absolute;
+  transform: translate(-50%);
+    content: " ";
+    background: #33CCFF;
+    width: 2px;
+    height: 1140px;
+    float: left;
+    margin-right: 10px;
+    margin: auto;
+    z-index: 5;
+
+}
+
 .about.left {
-  padding: 10px 30px 0 50px;
-  box-sizing: border-box;
+  width: 500px;
+  float:left;
+ /*  padding: 10px 30px 0 50px;
+  box-sizing: border-box; */
+  border: solid red;
+  margin: auto;
 }
 
 .about.right {
@@ -330,12 +357,12 @@ section.container_team {
   border: solid 10px #ffffff;
 }
 
-.vline {
+/* .vline {
   width: 2px;
   height: 100px;
   background-color: #f7f7f7;
   margin: 0 auto;
-}
+} */
 
 .last {
   padding: 20px;
@@ -423,23 +450,42 @@ section.container_team {
 }
 
 .partners {
-  padding: 10px 0;
+  padding: 50px 0;
 }
 
 .partners img {
   display: inline-block;
   vertical-align: top;
   width: 20%;
-  margin: 50px 2%;
+ /*  margin: 50px 2%; */
+
+}
+.partners a {
+ padding-right: 50px;
 }
 
 .col50 {
   width: 49%;
-  display: inline-block;
+  float:left;
   box-sizing: border-box;
   vertical-align: top;
+  border: solid red;
+  margin: 2px;
 }
 
+.col50:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.contact-main {
+  border: solid green;
+
+}
+.contact-form {
+  overflow: hidden;
+}
 .contact {
   background-color: #222222;
   background-image: url('https://lteplova.github.io/netology_lessons/assets/img/alfa/map.png');
@@ -457,18 +503,22 @@ section.container_team {
 }
 
 .contact input {
-  width: calc(100% - 30px);
+  width: 100%;
   height: 50px;
   border-radius: 2px;
   box-sizing: border-box;
   background-color: #ffffff;
   border: 1px solid #cbcbcb;
-  margin: 0 30px 30px 0;
+  margin-bottom: 30px;
   padding: 0 20px;
   font-size: 14px;
   color: #666;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.contact input:last-child {
+  margin-bottom: 0;
 }
 
 .contact textarea {
@@ -490,32 +540,49 @@ section.container_team {
   color: #b7b8b9;
 }
 
+.contact button {
+  margin: 0;
+
+
+}
+
 /* FOOTER */
 
-.footer-container {
+.footer {
   padding: 20px 0;
 }
 
-.footer-container .wrapper {
+.footer .wrapper {
   overflow: hidden;
- }
+}
 
-.footer-container .footer-copyright {
-  float: left;
+.footer .footer-copyright {
+  /*float: left;*/
   font-size: 14px;
   line-height: 22px;
   color: rgb(85, 85, 85);
-}
+  display: inline-block;
+  vertical-align: top;
+  top: 50%;
+  transform: translate(0, 50%);
+  box-sizing: border-box;
+  margin-right: 30px;
 
-.footer-container .footer-social {
-  float: right;
   }
 
-.footer-container .socicon {
+.footer .footer-social {
+ /* float: right;*/
+ display: inline-block;
+ margin-left: 80px;
+   }
+
+.footer .socicon {
   border: none;
   filter: invert(100%);
-}
+  }
 
-.footer-container .right {
+.footer .right {
+  display: inline-block;
   width: calc(50% - 100px);
+
 }
